add deploy script

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "compile": "npx hardhat compile",
     "console": "npx hardhat console",
     "test": "npx hardhat test",
+    "deploy:testnet": "npx hardhat run ./scripts/deploy.ts --network testnet --verbose",
     "format": "prettier --write \"**/*.{sol,js,ts}\"",
     "lint": "solhint \"contracts/**/*.sol\" && prettier -c \"**/*.{sol,js,ts}\""
   },
