--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
     "typechain": "^4.0.2",
-    "typescript": "^4.1.5",
-    "web3": "^1.3.4"
+    "typescript": "^4.1.5"
   }
 }
