--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@typechain/ethers-v5": "^6.0.0",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
@@ -45,7 +44,6 @@
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
     "typechain": "^4.0.2",
-    "typescript": "^4.1.5",
-    "web3": "^1.3.4"
+    "typescript": "^4.1.5"
   }
 }
