chore(*): add Github action
Add github action to run linter
and test when creating pull request.

--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run clean && npm run compile",
-    "clean": "npx hardhat clean",
-    "compile": "npx hardhat compile",
-    "console": "npx hardhat console",
-    "test": "npx hardhat test",
-    "deploy:testnet": "npx hardhat run ./scripts/deploy.ts --network testnet --verbose",
-    "deploy:localhost": "npx hardhat run ./scripts/deploy.ts --network localhost --verbose",
+    "hardhat:clean": "hardhat clean",
+    "hardhat:compile": "hardhat compile",
+    "hardhat:console": "hardhat console",
+    "test": "NODE_ENV=test hardhat test",
+    "deploy:testnet": "hardhat run ./scripts/deploy.ts --network testnet --verbose",
+    "deploy:localhost": "hardhat run ./scripts/deploy.ts --network localhost --verbose",
     "format": "prettier --write \"**/*.{sol,js,ts}\"",
+    "lint:sol": "solhint contracts/**/*.sol",
+    "lint:prettier": "prettier -c \"**/*.{sol,js,ts}\"",
     "lint": "solhint \"contracts/**/*.sol\" && prettier -c \"**/*.{sol,js,ts}\""
   },
   "repository": {
