--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "test": "NODE_ENV=test hardhat test",
     "deploy:testnet": "hardhat run ./scripts/deploy.ts --network testnet --verbose",
     "deploy:localhost": "hardhat run ./scripts/deploy.ts --network localhost --verbose",
+    "docker:create": "docker build . -t liberty-blockchain-node && docker container create --env-file ./.env -p 8999:8545 -p 8550:8546 -p 30305:30303 -p 30305:30303/udp --name liberty-chain-node liberty-blockchain-node:latest",
+    "docker:start": "docker container start liberty-chain-node",
+    "docker:stop": "docker container stop liberty-chain-node",
+    "docker:rm": "docker container rm liberty-chain-node",
     "format": "prettier --write \"**/*.{sol,js,ts}\"",
     "lint:sol": "solhint contracts/**/*.sol",
     "lint:prettier": "prettier -c \"**/*.{sol,js,ts}\"",
