--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,12 @@
 name: Test CI
-
 on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ "**" ]
-
+    branches: [ '**' ]
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -21,15 +19,27 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Use Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v1
         with:
-          node-version: '14.5.0'
+          node-version: '14.15.5'
 
       - name: Install
-        run: npm install
+        run: npm ci
 
       - name: Lint
         run: npm run lint
 
+      - name: Build Docs
+        run: npm run doc
+
+      - name: Build & Publish Dry Run
+        run: npm publish --dry-run
+
       - name: Test
         run: npm run test
+
+      - name: Report Test
+        uses: IgnusG/jest-report-action@v2.3.3
+        if: always()
+        with:
+          access-token: ${{ secrets.GITHUB_TOKEN }}
