--- a/contracts/package.json
+++ b/contracts/package.json
@@ -17,5 +17,5 @@
   },
   "repository": "https://github.com/LibertyDSNP/contracts",
   "keywords": [],
-  "license": "CC-BY-SA-4.0"
+  "license": "Apache-2.0"
 }
