--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "ts-node": "^9.1.1",
     "typechain": "^4.0.3",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "@ethersproject/contracts": "^5.1.1"
   }
 }
