--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,12 @@
 name: Test CI
-
 on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ "**" ]
-
+    branches: [ '**' ]
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -23,13 +21,16 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14.5.0'
+          node-version: '14.15.5'
 
       - name: Install
-        run: npm install
+        run: npm ci
 
       - name: Lint
         run: npm run lint
+
+      - name: Build & Publish Dry Run
+        run: npm publish --dry-run
 
       - name: Test
         run: npm run test
