Fix build and publish dry-run

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         run: npm run lint
 
       - name: Build & Publish Dry Run
+        working-directory: ./contracts
         run: npm publish --dry-run
 
       - name: Test
