--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run hardhat:clean && npm run hardhat:compile",
+    "hardhat": "hardhat",
     "hardhat:clean": "hardhat clean",
     "hardhat:compile": "hardhat compile",
     "hardhat:console": "hardhat console",
