--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ethers": "^5.1.4",
     "hardhat": "^2.2.1",
     "hardhat-typechain": "^0.3.5",
+    "js-sha3": "^0.8.0",
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.5",
     "solhint": "^3.3.2",
