Bugs/hardhat config ci fail (#16)
* Fix build and publish dry-run

* Update lock file to v2 and add npm run hardhat

* Minor version updates

* getAccounts should return empty when in CI

* Include js-sha3 in package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run hardhat:clean && npm run hardhat:compile",
+    "hardhat": "hardhat",
     "hardhat:clean": "hardhat clean",
     "hardhat:compile": "hardhat compile",
     "hardhat:console": "hardhat console",
@@ -32,25 +33,26 @@
   },
   "homepage": "https://github.com/Liberty30/contracts#readme",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "^6.0.0",
+    "@typechain/ethers-v5": "^6.0.5",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
-    "@types/node": "^14.14.31",
+    "@types/node": "^14.14.41",
     "chai": "^4.3.0",
     "dotenv": "^8.2.0",
-    "ethereum-waffle": "^3.2.2",
-    "ethers": "^5.0.31",
-    "hardhat": "^2.0.11",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.1.4",
+    "hardhat": "^2.2.1",
     "hardhat-typechain": "^0.3.5",
+    "js-sha3": "^0.8.0",
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.5",
     "solhint": "^3.3.2",
     "solhint-plugin-prettier": "0.0.5",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
-    "typechain": "^4.0.2",
+    "typechain": "^4.0.3",
     "typescript": "^4.1.5"
   }
 }
