--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "strict": true
   },
   "include": ["./scripts", "./test"],
+  "exclude": ["node_modules/**"],
   "files": [
     "./hardhat.config.ts"
   ]
