--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^6.0.5",
+    "@typechain/hardhat": "^1.0.1",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.41",
@@ -52,7 +53,6 @@
     "solhint-plugin-prettier": "0.0.5",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
-    "typechain": "^4.0.3",
     "typescript": "^4.1.5"
   },
   "dependencies": {
