--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^6.0.5",
+    "@typechain/hardhat": "^1.0.1",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.41",
@@ -44,7 +45,6 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
     "hardhat": "^2.2.1",
-    "hardhat-typechain": "^0.3.5",
     "js-sha3": "^0.8.0",
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.5",
@@ -52,7 +52,9 @@
     "solhint-plugin-prettier": "0.0.5",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
-    "typechain": "^4.0.3",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "@ethersproject/contracts": "^5.1.1"
   }
 }
