--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.41",
+    "@unfinishedlabs/test-generators": "*",
     "chai": "^4.3.0",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.3.0",
