--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,14 @@ jobs:
         with:
           node-version: '14.15.5'
 
-      - name: Check Versions
+      - name: Update npm to v7
+        run: npm i -g npm
+
+      - name: Check NPM Version
         run: npm --version
 
       - name: Install
-        run: npm --verbose ci
+        run: npm ci
 
       - name: Lint
         run: npm run lint
