--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,12 @@ jobs:
         with:
           node-version: '14.15.5'
 
+      - name: Update npm to v7
+        run: npm i -g npm
+
+      - name: Check NPM Version
+        run: npm --version
+
       - name: Install
         run: npm ci
 
