--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
     "hardhat": "^2.2.1",
+    "hardhat-gas-reporter": "^1.0.4",
     "js-sha3": "^0.8.0",
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.5",
-    "solhint": "^3.3.2",
+    "solhint": "^3.3.4",
     "solhint-plugin-prettier": "0.0.5",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
