--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "@ethersproject/contracts": "^5.1.1"
+    "@ethersproject/contracts": "^5.1.1",
+    "@openzeppelin/contracts": "^4.1.0"
   }
 }
