--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/Liberty30/contracts#readme",
   "devDependencies": {
+    "@dsnp/test-generators": "next",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^6.0.5",
@@ -40,7 +41,6 @@
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.41",
-    "@unfinishedlabs/test-generators": "next",
     "chai": "^4.3.0",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.3.0",
