--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/Liberty30/contracts#readme",
   "devDependencies": {
-    "@dsnp/test-generators": "next",
+    "@dsnp/test-generators": "0.0.0-6a23bc",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^6.0.5",
