--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@dsnp/test-generators": "0.0.0-6a23bc",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "^6.0.5",
-    "@typechain/hardhat": "^1.0.1",
+    "@typechain/ethers-v5": "7.0.0",
+    "@typechain/hardhat": "2.0.1",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.41",
