--- a/package.json
+++ b/package.json
@@ -36,28 +36,27 @@
     "@dsnp/test-generators": "0.0.0-6a23bc",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "^6.0.5",
-    "@typechain/hardhat": "^1.0.1",
-    "@types/chai": "^4.2.15",
-    "@types/mocha": "^8.2.1",
-    "@types/node": "^14.14.41",
-    "chai": "^4.3.0",
+    "@typechain/ethers-v5": "7.0.0",
+    "@typechain/hardhat": "2.0.1",
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.9.0",
+    "chai": "^4.3.4",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.1.4",
-    "hardhat": "^2.2.1",
+    "ethers": "^5.3.0",
+    "hardhat": "^2.3.0",
     "hardhat-gas-reporter": "^1.0.4",
     "js-sha3": "^0.8.0",
-    "prettier": "^2.2.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.5",
-    "solhint": "^3.3.4",
+    "prettier": "^2.3.0",
+    "prettier-plugin-solidity": "^1.0.0-beta.11",
+    "solhint": "^3.3.6",
     "solhint-plugin-prettier": "0.0.5",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@ethersproject/contracts": "^5.1.1",
     "@openzeppelin/contracts": "^4.1.0"
   }
 }
