--- a/.github/workflows/publish-next.yml
+++ b/.github/workflows/publish-next.yml
@@ -1,41 +1,41 @@
 name: Publish NPM/Docker @next
 on:
   push:
-    branches: [ feature/docker-test-container-178467941 ] # TESTING
+    branches: [ main ]
 jobs:
-#  npm-next:
-#    runs-on: ubuntu-20.04
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Use Node.js
-#        uses: actions/setup-node@v2
-#        with:
-#          node-version: '14.15.5'
-#          registry-url: 'https://registry.npmjs.org'
-#
-#      - uses: actions/cache@v2
-#        with:
-#          path: ~/.npm
-#          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-#          restore-keys: |
-#            ${{ runner.os }}-node-
-#
-#      - name: Install
-#        run: npm ci
-#
-#      - name: NPM Contracts Version ⬆️
-#        working-directory: ./contracts
-#        run: npm version --new-version "v0.0.0-${FULL_SHA:0:6}" --no-git-tag-version
-#        env:
-#          FULL_SHA: ${{ github.sha }}
-#
-#      - name: NPM Contracts Publish @next 🚂
-#        working-directory: ./contracts
-#        run: npm publish --tag next --access public
-#        env:
-#          NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
+  npm-next:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.15.5'
+          registry-url: 'https://registry.npmjs.org'
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install
+        run: npm ci
+
+      - name: NPM Contracts Version ⬆️
+        working-directory: ./contracts
+        run: npm version --new-version "v0.0.0-${FULL_SHA:0:6}" --no-git-tag-version
+        env:
+          FULL_SHA: ${{ github.sha }}
+
+      - name: NPM Contracts Publish @next 🚂
+        working-directory: ./contracts
+        run: npm publish --tag next --access public
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
 
   docker-next:
     runs-on: ubuntu-20.04
