--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,28 @@ jobs:
 
       - name: Test
         run: npm run test
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build dsnp/ganache
+        id: docker_build_ganache
+        uses: docker/build-push-action@v2
+        with:
+          push: false
+          file: ganache.Dockerfile
+
+      - name: Build dsnp/hardhat
+        id: docker_build_hardhat
+        uses: docker/build-push-action@v2
+        with:
+          push: false
+          file: hardhat.Dockerfile
+
+      - name: Image digests
+        run: |
+          echo dsnp/hardhat ${{ steps.docker_build_hardhat.outputs.digest }}
+          echo dsnp/ganache ${{ steps.docker_build_ganache.outputs.digest }}
