--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,19 @@
-name: Release Package
+name: Release NPM/Docker @latest
 on:
   release:
     types: [ released ]
+
 jobs:
   publish-to-npm:
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        node-version: [14.15.5]
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
         with:
+          node-version: '14.15.5'
           registry-url: 'https://registry.npmjs.org'
 
       - uses: actions/cache@v2
@@ -35,3 +35,46 @@ jobs:
         run: npm publish --tag latest
         env:
           NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
+
+  docker-latest:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push dsnp/ganache:latest
+        id: docker_build_ganache
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          file: ganache.Dockerfile
+          tags: |
+            dsnp/ganache:latest
+            dsnp/ganache:${{ github.event.release.tag_name }}
+
+      - name: Build and push dsnp/hardhat:latest
+        id: docker_build_hardhat
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          file: hardhat.Dockerfile
+          tags: |
+            dsnp/hardhat:latest
+            dsnp/hardhat:${{ github.event.release.tag_name }}
+
+      - name: Image digests
+        run: |
+          echo dsnp/hardhat ${{ steps.docker_build_hardhat.outputs.digest }}
+          echo dsnp/ganache ${{ steps.docker_build_ganache.outputs.digest }}
