--- a/package.json
+++ b/package.json
@@ -33,30 +33,30 @@
   },
   "homepage": "https://github.com/Liberty30/contracts#readme",
   "devDependencies": {
-    "@dsnp/test-generators": "0.0.0-6a23bc",
+    "@dsnp/test-generators": "0.1.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "7.0.0",
-    "@typechain/hardhat": "2.0.1",
-    "@types/chai": "^4.2.18",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.9.0",
+    "@typechain/ethers-v5": "7.0.1",
+    "@typechain/hardhat": "2.1.2",
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^16.3.0",
     "chai": "^4.3.4",
-    "dotenv": "^8.2.0",
-    "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.3.0",
-    "hardhat": "^2.3.0",
+    "dotenv": "10.0.0",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.4.1",
+    "hardhat": "^2.4.3",
     "hardhat-gas-reporter": "^1.0.4",
     "js-sha3": "^0.8.0",
-    "prettier": "^2.3.0",
-    "prettier-plugin-solidity": "^1.0.0-beta.11",
+    "prettier": "^2.3.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.14",
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "0.0.5",
     "ts-generator": "^0.1.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.3.2"
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.1.0"
+    "@openzeppelin/contracts": "^4.2.0"
   }
 }
