--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.2.0",
-    "hardhat-ethernal": "^0.3.7"
+    "@openzeppelin/contracts": "^4.2.0"
   }
 }
