OpenEthereum dev Docker with contracts

--- a/.github/workflows/publish-next.yml
+++ b/.github/workflows/publish-next.yml
@@ -83,7 +83,18 @@ jobs:
             dsnp/hardhat:next
             dsnp/hardhat:${{ env.SHA_TAG }}
 
+      - name: Build and push dsnp/openethereum:next
+        id: docker_build_openethereum
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          file: openethereum.Dockerfile
+          tags: |
+            dsnp/openethereum:next
+            dsnp/openethereum:${{ env.SHA_TAG }}
+
       - name: Image digests
         run: |
           echo dsnp/hardhat ${{ steps.docker_build_hardhat.outputs.digest }}
           echo dsnp/ganache ${{ steps.docker_build_ganache.outputs.digest }}
+          echo dsnp/openethereum ${{ steps.docker_build_openethereum.outputs.digest }}
