--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,15 @@ jobs:
           push: false
           file: hardhat.Dockerfile
 
+      - name: Build dsnp/openethereum
+        id: docker_build_openethereum
+        uses: docker/build-push-action@v2
+        with:
+          push: false
+          file: openethereum.Dockerfile
+
       - name: Image digests
         run: |
           echo dsnp/hardhat ${{ steps.docker_build_hardhat.outputs.digest }}
           echo dsnp/ganache ${{ steps.docker_build_ganache.outputs.digest }}
+          echo dsnp/openethereum ${{ steps.docker_build_openethereum.outputs.digest }}
