--- a/package.json
+++ b/package.json
@@ -31,20 +31,20 @@
     "@dsnp/test-generators": "0.1.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "7.0.1",
-    "@typechain/hardhat": "2.1.2",
-    "@types/chai": "^4.2.21",
-    "@types/mocha": "^8.2.3",
-    "@types/node": "^16.3.0",
+    "@typechain/ethers-v5": "~>7.2.0",
+    "@typechain/hardhat": "^2.3.1",
+    "@types/chai": "^4.2.22",
+    "@types/mocha": "8.2.3",
+    "@types/node": "16.3.0",
     "chai": "^4.3.4",
     "dotenv": "10.0.0",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.4.3",
-    "hardhat": "^2.6.0",
-    "hardhat-gas-reporter": "^1.0.4",
+    "ethereum-waffle": "~>3.4",
+    "ethers": "^5.4.1",
+    "hardhat": "2.6.8",
+    "hardhat-gas-reporter": "1.0.4",
     "js-sha3": "^0.8.0",
-    "prettier": "^2.3.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.17",
+    "prettier": "^2.3",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "0.0.5",
     "ts-generator": "^0.1.1",
